Added new api's /getDemandPerMealType,/getKeyDemandDrivers,/getAccuracyDetails,/getBiasDetails
