# static/swagger.json
@@ -113,6 +113,20 @@
         "properties": {
           "item": {
             "type": "string"
+          },
+          "date": {
+            "type": "string"
+          }
+        }
+      },
+      "demandPerMealRequest": {
+        "type": "object",
+        "properties": {
+          "item": {
+            "type": "string"
+          },
+          "date": {
+            "type": "string"
           }
         }
       }
@@ -553,6 +567,28 @@
         }
       }
     },
+    "/getAlldemandPerMeal": {
+      "get": {
+        "tags": [
+          "Get All demand per meal"
+        ],
+        "summary": "Get All demand per meal",
+        "responses": {
+          "200": {
+            "description": "OK",
+            "schema": {
+              "$ref": "#/components/schemas/seasonilityResponse"
+            }
+          },
+          "404": {
+            "description": "NOT FOUND",
+            "schema": {
+              "$ref": "#/components/schemas/seasonilityResponse"
+            }
+          }
+        }
+      }
+    },
     "/stockDetails": {
       "post": {
         "tags": [
@@ -599,6 +635,39 @@
             "application/json": {
               "schema": {
                 "$ref": "#/components/schemas/stockDetailsRequest"
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "OK",
+            "schema": {
+              "$ref": "#/components/schemas/salesInsightsResponse"
+            }
+          },
+          "404": {
+            "description": "NOT FOUND",
+            "schema": {
+              "$ref": "#/components/schemas/salesInsightsResponse"
+            }
+          }
+        }
+      }
+    },
+    "/demandPerMeal": {
+      "post": {
+        "tags": [
+          "BOM details API"
+        ],
+        "summary": "Add todo",
+        "requestBody": {
+          "description": "BOM details API",
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/demandPerMealRequest"
               }
             }
           }
